src/main/java/com/example/citronix/web/errors/InvalidRecolteException.java
package com.example.citronix.web.errors;

public class InvalidRecolteException extends RuntimeException{
    public InvalidRecolteException(String message) {
        super(message);
    }

}
